Update and rename INDEX.HTML to index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <p>For those planning a visit, knowing the updated prices for Sonics most popular items is essential. Classic burgers at Sonic typically range from $2.99 to $6.99 depending on the size and toppings, including options like cheeseburgers, bacon burgers, and deluxe sandwiches. Chicken sandwiches and tenders are usually priced between $3.49 and $7.29, giving you plenty of options for a protein-packed meal. Side items such as fries, onion rings, and tater tots range from $1.99 to $3.49, making it easy to complement your main meal. Sonics signature drinks, slushes, and floats vary from $1.49 to $3.99, while shakes are generally priced between $3.49 and $4.99. Keep in mind that prices may slightly differ depending on location, so its always a good idea to check before you go.</p>
 
 <h2>Breakfast Menu Prices at Sonic</h2>
-<p>Breakfast at Sonic is both affordable and delicious. Popular breakfast options include breakfast burritos, Cinnasnacks, and classic breakfast sandwiches, usually ranging from $2.49 to $4.99. These options are perfect for people on the go who want a quick, tasty, and filling start to their day. Sonic’s breakfast menu also includes customizable options, allowing you to choose ingredients and sides according to your preferences. From a hearty morning sandwich to a sweet treat like Cinnasnacks, the breakfast menu has something to satisfy every craving.</p>
+<p>Breakfast at Sonic is both affordable and delicious. Popular breakfast options include breakfast burritos, Cinnasnacks, and classic breakfast sandwiches, usually ranging from $2.49 to $4.99. These options are perfect for people on the go who want a quick, tasty, and filling start to their day. Sonicâ€™s breakfast menu also includes customizable options, allowing you to choose ingredients and sides according to your preferences. From a hearty morning sandwich to a sweet treat like Cinnasnacks, the breakfast menu has something to satisfy every craving.</p>
 
 <h2>Combos and Value Deals</h2>
 <p>Sonic frequently updates its menu with new items, seasonal specials, and combo offers. Combos are a great way to enjoy a full meal at a discounted price. For example, a burger, fries, and drink combo may cost around $6.99 to $8.99 depending on your selections. Value deals make it easier for families and friends to enjoy a complete meal without overspending. Sonic also sometimes offers limited-time promotions and app-exclusive deals that give even more savings. Keeping an eye on these deals ensures that you get maximum value from your visit.</p>
@@ -40,3 +40,4 @@
 
 </body>
 </html>
+
